# shonenjump_parser

./: .gitignore  README.md  pyproject.toml
shonenjumpparser/: __init__.py  shonenjumpparser.py
tests/: tests.py
